# publications-portal

./: .gitignore  .gitlab-ci.yml  .invenio  Pipfile  README.md  celerybeat-schedule.db  docker-compose.full.yml  docker-services.yml  invenio.cfg
app_data/: pages.yaml  vocabularies.yaml
app_data/pages/: about.html
app_data/vocabularies/: resource_types.yaml
assets/js/invenio_app_rdm/overridableRegistry/: RecordsResultsListItem.js  Search.js  mapping.js
assets/less/site/globals/: site.overrides  site.variables
assets/templates/custom_fields/: Imprint.js  Journal.js  Meeting.js  Summarization.js
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
halric/: constants.py  core.py  invenio_rdm.py  main.py
scopus_automation/: .gitignore  constants.py  dump.json  invenio_rdm.py  main.py  maintenance.py  utils.py  yaml_load.py
site/: .gitkeep  setup.cfg
site/ess_digital_repository/: views.py  webpack.py
site/ess_digital_repository/custom_fields/: __init__.py  imprint.py  journal.py  meeting.py  summarization.py  thesis.py
templates/: imprint.html  journal.html  meeting.html  summarization.html
templates/semantic-ui/invenio_app_rdm/: footer.html  frontpage.html  frontpage1.html  header.html  header_frontpage.html  header_login.html  searchbar.html  site_footer.html
templates/semantic-ui/invenio_app_rdm/records/: detail.html  detail1.html  search.html
templates/semantic-ui/invenio_app_rdm/records/details/: creatibutors.html  description.html  meta.html
templates/semantic-ui/invenio_app_rdm/records/macros/: creatibutors_accordion.html  (+1 more)
