
[metadata]
name = ess-digital-repository

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    ess_digital_repository_views = ess_digital_repository.views:create_blueprint
invenio_assets.webpack =
    ess_digital_repository_theme = ess_digital_repository.webpack:theme
